add whatasapp button

--- a/our_services.html
+++ b/our_services.html
@@ -32,6 +32,18 @@
     </head>
     <body>
 
+    <!-- WhataApp -->
+
+    <div id="whatsApp"></div>
+    <script type="text/javascript">
+        $(function () {
+            $('#whatsApp').floatingWhatsApp({
+                phone: '5491133359850'
+            });
+        });
+    </script>
+
+
     <!-- Messenger Plugin de chat Code -->
     <div id="fb-root"></div>
 
@@ -70,6 +82,8 @@
             <div></div>
         </div>
     </div>
+
+
     <!-- Preloader Start -->
 
     <!-- Header 01 Start -->
@@ -397,5 +411,11 @@
         <!-- Rev slider Add on End -->
 
         <script src="js/theme.js"></script>
+
+        <!-- WhatsApp button --->
+        <script type="text/javascript" src="js/floating-wpp.min.js"></script>
+        <link rel="stylesheet" href="js/floating-wpp.min.css">
+        <script type="text/javascript" src="js/services.js"></script>
+
     </body>
 </html>
