Add services to index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Financeya - Consulting, Finance & Accounting HTML Template</title>
+        <title>Dimensión 360</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,7 +23,7 @@
         <link rel="stylesheet" type="text/css" href="css/responsive.css"/>
 
         <!-- Favicon Icon -->
-        <link rel="icon"  type="image/png" href="images/favicon.png">
+        <link rel="icon"  type="image/png" href="images/logo.png">
         <!-- Favicon Icon -->
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -126,24 +126,8 @@
                                     <li class="menu-item-has-children">
                                         <a href="our_services.html">Servicios</a>
                                     </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog_standard.html">Blog Standard</a></li>
-                                            <li><a href="blog_grid.html">Blog Grid</a></li>
-                                        </ul>
-                                    </li>
                                     <li><a href="#contact">Contacto</a></li>
                                 </ul>
-                                <div class="access_btns">
-                                    <a href="#" class="src_btn"><i class="bx bx-search"></i></a>
-                                    <div class="cart_btn">
-                                        <a href="#"><i class="bx bx-shopping-bag"></i><span>3</span></a>
-                                        <div class="mini_cart">
-                                           Próximamente
-                                        </div>
-                                    </div>
-                                </div>
                             </nav>
                         </div>
 
@@ -500,8 +484,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h5 class="sub_title">Our Services</h5>
-                        <h2 class="sec_title">What We Offer</h2>
+                        <h2 class="sec_title">Nuestros Servicios</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -509,89 +492,112 @@
                         <div class="service_01_slider owl-carousel">
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/1.jpg" alt="Mutual Funds"/>
+                                    <img src="images/services/operation.jpeg" alt="Operación y comercialización"/>
                                 </div>
                                 <div class="sr01_dtl text-center">
-                                    <i class="flaticon-202-piggy-bank"></i>
-                                    <h3><a href="single_service.html">Mutual Funds</a></h3>
+                                    <i class="flaticon-092-invoice-3"></i>
+                                    <h3><a href="operation_service.html">Operación y </br>comercialización</a></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Diagnosticamos el desempeño y evolución de tus estrategias comerciales 
+                                        así como el ciclo de venta. Validamos tus planes comerciales y mercadológicos 
+                                        aplicando una metodología diseñada en programas de coaching para equipos 
+                                        gerenciales y jefaturas.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="operation_service.html"></br>Leer Más</a>
                                 </div>
                             </div>
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/2.jpg" alt="Mutual Funds"/>
+                                    <img src="images/services/finance.jpeg" alt="Finanzas, administración"/>
                                 </div>
                                 <div class="sr01_dtl text-center">
                                     <i class="flaticon-205-money-2"></i>
-                                    <h3><a href="single_service.html">Investment in Bonds</a></h3>
+                                    <h3><a href="finance_service.html">Finanzas, administración </br>y planeación fiscal</a></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ofrecemos servicios de análisis a la calidad y confiabilidad 
+                                        de tu información financiera mediante revisiones estratégicas 
+                                        a tus principales indicadores, ayudando a la efectiva toma 
+                                        de decisiones.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="finance_service.html"></br></br>Leer Más</a>
                                 </div>
                             </div>
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/3.jpg" alt="Mutual Funds"/>
+                                    <img src="images/services/human.jpeg" alt="Capital Humano"/>
                                 </div>
                                 <div class="sr01_dtl text-center">
-                                    <i class="flaticon-200-presentation"></i>
-                                    <h3><a href="single_service.html">Investment Management</a></h3>
+                                    <i class="flaticon-075-user-3"></i>
+                                    <h3><a href="capital_service.html">Capital humano y desarrollo</br>organizacional</a></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Proveemos y administramos la mejor plataforma de herramientas 
+                                        de medición de tu talento: psicometrías, evaluaciones de desempeño,
+                                        evaluaciones 360 y clima laboral.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="capital_service.html"></br></br></br>Leer Más</a>
                                 </div>
                             </div>
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/4.jpg" alt="Mutual Funds">
+                                    <img src="images/services/headhuntinh.jpeg" alt="Talento">
                                 </div>
                                 <div class="sr01_dtl text-center">
-                                    <i class="flaticon-127-profits-4"></i>
-                                    <h3><a href="#">Business Growth</a></h3>
+                                    <i class="flaticon-095-magnifying-glass"></i>
+                                    <h3>
+                                        <a href="headhunting_service.html">Atracción de talento </br>(Headhunting), evaluación </br>de candidatos, 
+                                    </br>Assessment Center.
+                                        </a>
+                                    </h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Contamos con un equipo de profesionales dedicados a la aplicación 
+                                        del  método más eficiente para la evaluación del talento.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="headhunting_service.html">Leer Más</a>
                                 </div>
                             </div>
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/5.jpg" alt="Mutual Funds">
+                                    <img src="images/services/control.jpeg" alt="COSO">
                                 </div>
                                 <div class="sr01_dtl text-center">
                                     <i class="flaticon-137-money-bag-3"></i>
-                                    <h3><a href="single_service.html">Taxes Planning</a></h3>
+                                    <h3><a href="coso_service.html">Control interno, procesos,
+                                    </br>medición del riesgo </br>y método COSO.</a></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Desarrollamos para ti un modelo de riesgo en base a las necesidades 
+                                        de tu negocio.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="coso_service.html"></br></br></br>Leer Más</a>
                                 </div>
                             </div>
                             <div class="service_01">
                                 <div class="sr01_thumb">
-                                    <img src="images/services/6.jpg" alt="Mutual Funds">
+                                    <img src="images/services/gobierno.jpeg" alt="Consejero">
                                 </div>
                                 <div class="sr01_dtl text-center">
-                                    <i class="flaticon-204-money-3"></i>
-                                    <h3><a href="single_service.html">Financial Planning</a></h3>
+                                    <i class="flaticon-127-profits-4"></i>
+                                    <h3><a href="coorporate_service.html">Consejero independiente
+                                    </br>y gobierno corporativo</a></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ayudamos a tu empresa a incorporar la figura de gobierno corporativo.
                                     </p>
-                                    <a class="learn_more_lnk" href="single_service.html">Read More</a>
+                                    <a class="learn_more_lnk" href="coorporate_service.html"></br></br></br></br></br>Leer Más</a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <div class="notes">
-                            We provide new ways to manage your businesses <a href="#"><span>Request your Quote</span><i class="bx bx-right-arrow-alt"></i></a>
+                            <div class="service_01">
+                                <div class="sr01_thumb">
+                                    <img src="images/services/identidad.jpeg" alt="Promocionales">
+                                </div>
+                                <div class="sr01_dtl text-center">
+                                    <i class="flaticon-122-idea-3"></i>
+                                    <h3><a href="identity_service.html">Identidad corporativa, </br>impresos
+                                    </br>y promocionales</a></h3>
+                                    <p>
+                                        Impulsamos tus ideas por medio de servicios creativos.
+                                    </p>
+                                    <a class="learn_more_lnk" href="identity_service.html"></br></br></br>Leer Más</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -649,92 +655,6 @@
             </div>
         </section>
         <!-- Quote Section End -->
-
-        <!-- CTA Section Start -->
-        <section class="cta_section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-lg-8">
-                        <h2>Looking for a First-Class Business Plan Consultant?</h2>
-                    </div>
-                    <div class="col-md-4 col-lg-4 text-right">
-                        <a href="#" class="fnc_btn wh"><span>Request a Quote<i class="bx bx-right-arrow-alt"></i></span></a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- CTA Section End -->
-
-        <!-- Footer Start -->
-        <footer class="footer_01">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-lg-3 col-xl-4">
-                        <div class="widget">
-                            <div class="about_widget">
-                                <div class="aw_logo">
-                                    <a href="#"><img src="images/logo_2.png" alt=""/></a>
-                                </div>
-                                <p>
-                                    It deals with the questions of how an individual,
-                                    company or government acquires the money needed called capital in the
-                                    company context - and how they then spend or invest that money
-                                </p>
-                                <div class="fo_social">
-                                    <a href="#"><i class="bx bxl-facebook"></i></a>
-                                    <a href="#"><i class="bx bxl-twitter"></i></a>
-                                    <a href="#"><i class="bx bxl-dribbble"></i></a>
-                                    <a href="#"><i class="bx bxl-linkedin"></i></a>
-                                    <a href="#"><i class="bx bxl-skype"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 col-xl-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Help Center</h3>
-                            <ul>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">FAQS</a></li>
-                                <li><a href="#">Support Center</a></li>
-                                <li><a href="#">Use of Terms</a></li>
-                                <li><a href="#">Customer Area</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 col-xl-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Our Services</h3>
-                            <ul>
-                                <li><a href="#">Mutual Funds</a></li>
-                                <li><a href="#">Investment in Bonds</a></li>
-                                <li><a href="#">Invest Management</a></li>
-                                <li><a href="#">Business Growth</a></li>
-                                <li><a href="#">Taxes Planning</a></li>
-                                <li><a href="#">Financial Planning</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 col-xl-4 pdl95">
-                        <div class="widget subscribe_widgets">
-                            <h3 class="widget-title">Stay Updated</h3>
-                            <div class="subscribe_content">
-                                <p>
-                                    Enter your email address into our subscribe form to keep yourself updating with our newslatter.
-                                </p>
-                                <form method="post" action="#">
-                                    <input type="email" placeholder="Your Email *" name="s_email"/>
-                                    <button type="submit" name="s_submit"><i class="bx bx-right-arrow-alt"></i></button>
-                                </form>
-                                <div class="form_note text-right">Get all <span>updates and offers</span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Footer End -->
 
         <!-- Copyright Section Start -->
         <section class="copyright">
