--- a/our_services.html
+++ b/our_services.html
@@ -190,7 +190,7 @@
                             <div class="sr01_dtl text-center">
                                 <i class="flaticon-092-invoice-3"></i>
                                 <h5>Operación y comercialización </br> </br></h5>
-                                <a class="learn_more_lnk" href="single_service.html">Leer Más</a>
+                                <a class="learn_more_lnk" href="operation_service.html">Leer Más</a>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                                 <i class="flaticon-205-money-2"></i>
                                 <h5>Finanzas, administración </br>y planeación fiscal</h5>
                               
-                                <a class="learn_more_lnk" href="single_service.html">Leer Más</a>
+                                <a class="learn_more_lnk" href="finance_service.html">Leer Más</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                 <h5>Capital humano y desarrollo
                                     </br>organizacional</h5>
                               
-                                <a class="learn_more_lnk" href="single_service.html">Leer Más</a>
+                                <a class="learn_more_lnk" href="capital_service.html">Leer Más</a>
                             </div>
                         </div>
                     </div>
