--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                                  data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]"
                                  data-paddingleft="[0,0,0,25]"
-                                 ><a href="#" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a><a href="#" class="fnc_btn fnc_light"><span>Nosotros<i class="bx bx-right-arrow-alt"></i></span></a></div>
+                                 ><a href="our_services.html" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a>
+                                 <a href="#company" class="fnc_btn fnc_light"><span>Nosotros<i class="bx bx-right-arrow-alt"></i></span></a></div>
                         </li>
                         <li data-index="rs-2" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                             <img src="images/car/design-10.jpeg"  alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
@@ -278,7 +279,8 @@
                                  data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]"
                                  data-paddingleft="[0,0,0,25]"
-                                 ><a href="#" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a><a href="#" class="fnc_btn fnc_light"><span>Saber más<i class="bx bx-right-arrow-alt"></i></span></a></div>
+                                 ><a href="our_services.html" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a>
+                                 <a href="finance_service.html" class="fnc_btn fnc_light"><span>Saber más<i class="bx bx-right-arrow-alt"></i></span></a></div>
                         </li>
                         <li data-index="rs-3" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                             <img src="images/car/hire-2.jpeg"  alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
@@ -335,7 +337,8 @@
                                  data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]"
                                  data-paddingleft="[0,0,0,25]"
-                                 ><a href="#" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a><a href="#" class="fnc_btn fnc_light"><span>Saber más<i class="bx bx-right-arrow-alt"></i></span></a></div>
+                                 ><a href="our_services.html" class="fnc_btn reverses"><span>Servicios<i class="bx bx-right-arrow-alt"></i></span></a>
+                                 <a href="identity_service.html" class="fnc_btn fnc_light"><span>Saber más<i class="bx bx-right-arrow-alt"></i></span></a></div>
                         </li>
                     </ul>
                 </div>
@@ -606,7 +609,7 @@
         <!-- Service Section End -->
 
         <!-- Quote Section Start -->
-        <section class="quote_section" id="request_quote_section">
+        <section class="quote_section" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
